<resources>
    <string name="app_name">Sanica</string>
    <string name="mnuPatient">Expediente</string>
    <string name="mnuRecipes">Recetas</string>
    <string name="mnuCitation">Citas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mnuDiary">Agenda</string>
    <string name="mnuConsult">Consultas</string>
    <string name="mnuEConsult">eConsultas</string>
    <string name="mnuSearch">Buscar</string>
    <string name="date">%1$s %2$s</string>
    <string name="text_subrayado"><u>%1$s</u></string>
    <string name="duration">Duracion: %1$s Dias</string>
    <string name="dosis">%1$s cada %2$s horas </string>
    <string name="fecha">Fecha: %1$s</string>
    <string name="storage_permition_rationale_message">test</string>
    <string name="storage_permission_rationale_title">test</string>
    <string name="storage_permission_denied_message">test2</string>
    <string name="eliminar">Eliminar</string>
    <string name="accept">Accept</string>
    <string name="Warning_message">Aviso</string>
    <string name="person">ShowPerson</string>
    <string name="LoginActivity_medicLogin_dialog_message">¿Como deseas entrar?</string>
    <string name="LoginActivity_medicLogin_dialog_tittle">Selección</string>
    <string name="LoginActivity_medicLogin_dialog_positiveButton">Médico</string>
    <string name="LoginActivity_medicLogin_dialog_negativeButton">Usuario</string>
    <string name="httpException_error">Prueba de nuevo</string>
    <string name="SocketTimeOutException">Prueba de nuevo</string>
    <string name="IOException_error">IO error</string>
    <string name="HistorialFragment_toolbar_title">Historial</string>
    <string name="HistorialDetailActivity_toolbar_tittle">Detalle historial</string>
    <string name="ExpedientFragment_toolbar_tittle">Expediente</string>
    <string name="AttachmentsFragment_toolbar_tittle">Adjuntos</string>
    <string name="AttachmentsFragment_photo">Open photo</string>
    <string name="ConsultFragment_toolbar_tittle">Consultas</string>
    <string name="ChronicFragmentTitle">Enfermedades Cronicas y alergias</string>
    <string name="activity_citation_selectDay_hint">Pulsa para eleccionar un dia</string>
</resources>
